tests/NormalTests/paczka1/small_fuzzy/26526251.err
Error in line 10: D5oN S2V0 3,0
Error in line 8: oJ6fs6gZ A418 22,2
